--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,16 @@ before_install:
     - docker build -t docker88/docker-react -f Dockerfile.dev .
 
 script:
-    - docker run -e CI=true docker88/docker-react npm run test 
-    
+    - docker run -e CI=true docker88/docker-react npm run test
+
+deploy:
+    provider: elasticbeanstalk
+    region: "us-east-2" 
+    app: "docker-react"
+    env: "DockerReact-env"
+    bucket_name: "elasticbeanstalk-us-east-2-697460064223"
+    bucket_path: "docker-react"
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
